--- a/cross_validation.ipynb
+++ b/cross_validation.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib as mp\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +228,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +452,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,6 +461,104 @@
     "features = data.drop([\"id\", \"Unnamed: 32\", \"diagnosis\"], axis=1)\n",
     "features.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kf = KFold(n_splits=5)\n",
+    "model = LogisticRegression(max_iter=7000)\n",
+    "scores = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9122807017543859\n",
+      "Accuracy: 0.956140350877193\n",
+      "Accuracy: 0.9649122807017544\n",
+      "Accuracy: 0.9649122807017544\n",
+      "Accuracy: 0.9469026548672567\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "for train_index, test_index in kf.split(features, data.diagnosis):\n",
+    "    X_train, X_test = features.iloc[train_index,:], features.iloc[test_index,:]\n",
+    "    y_train, y_test = data.diagnosis[train_index], data.diagnosis[test_index]  \n",
+    "    # fit the model on the training data\n",
+    "    model.fit(X_train, y_train)\n",
+    "\n",
+    "    # evaluate the model on the testing data\n",
+    "    score = model.score(X_test, y_test)\n",
+    "    scores.append(score)\n",
+    "    # print the accuracy score for each fold\n",
+    "    print(\"Accuracy:\", score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean accuracy: 0.9490296537804689\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate the mean accuracy score across all folds\n",
+    "mean_score = np.mean(scores)\n",
+    "print(\"Mean accuracy:\", mean_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy scores for each fold: [0.93859649 0.94736842 0.98245614 0.92982456 0.95575221]\n",
+      "Mean accuracy score: 0.9507995652848935\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "# initialize a logistic regression model\n",
+    "\n",
+    "# perform 5-fold cross-validation and get the accuracy scores for each fold\n",
+    "scores = cross_val_score(model, features,data[['diagnosis']], cv=5)\n",
+    "\n",
+    "# print the accuracy scores for each fold and the mean accuracy score\n",
+    "print(\"Accuracy scores for each fold:\", scores)\n",
+    "print(\"Mean accuracy score:\", scores.mean())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
