accuracy and classification report for RandomForestClassifier

--- a/cross_validation.ipynb
+++ b/cross_validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -555,10 +555,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, data.diagnosis, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_model=RandomForestClassifier(n_estimators=100, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = cross_val_score(rf_model, X_train, y_train, cv=5, scoring='balanced_accuracy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision scores for each fold: [0.95454545 0.93240454 0.98245614 0.95304438 0.92363261]\n",
+      "Mean precision score: 0.9492166244488226\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print the accuracy scores for each fold and the mean accuracy score\n",
+    "print(\"Precision scores for each fold:\", scores)\n",
+    "print(\"Mean precision score:\", scores.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "report:               precision    recall  f1-score   support\n",
+      "\n",
+      "           B       0.80      1.00      0.89         4\n",
+      "           M       1.00      0.97      0.99        34\n",
+      "\n",
+      "    accuracy                           0.97        38\n",
+      "   macro avg       0.90      0.99      0.94        38\n",
+      "weighted avg       0.98      0.97      0.97        38\n",
+      "\n",
+      "report:               precision    recall  f1-score   support\n",
+      "\n",
+      "           B       0.82      1.00      0.90        18\n",
+      "           M       1.00      0.79      0.88        19\n",
+      "\n",
+      "    accuracy                           0.89        37\n",
+      "   macro avg       0.91      0.89      0.89        37\n",
+      "weighted avg       0.91      0.89      0.89        37\n",
+      "\n",
+      "report:               precision    recall  f1-score   support\n",
+      "\n",
+      "           B       1.00      0.91      0.95        22\n",
+      "           M       0.88      1.00      0.94        15\n",
+      "\n",
+      "    accuracy                           0.95        37\n",
+      "   macro avg       0.94      0.95      0.94        37\n",
+      "weighted avg       0.95      0.95      0.95        37\n",
+      "\n",
+      "report:               precision    recall  f1-score   support\n",
+      "\n",
+      "           B       0.89      0.73      0.80        22\n",
+      "           M       0.68      0.87      0.76        15\n",
+      "\n",
+      "    accuracy                           0.78        37\n",
+      "   macro avg       0.79      0.80      0.78        37\n",
+      "weighted avg       0.81      0.78      0.79        37\n",
+      "\n",
+      "report:               precision    recall  f1-score   support\n",
+      "\n",
+      "           B       1.00      0.96      0.98        24\n",
+      "           M       0.93      1.00      0.96        13\n",
+      "\n",
+      "    accuracy                           0.97        37\n",
+      "   macro avg       0.96      0.98      0.97        37\n",
+      "weighted avg       0.97      0.97      0.97        37\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "rf_scores=[]\n",
+    "for train_index, test_index in kf.split(X_train, y_train):\n",
+    "    X_train, X_test = features.iloc[train_index,:], features.iloc[test_index,:]\n",
+    "    y_train, y_test = data.diagnosis[train_index], data.diagnosis[test_index]  \n",
+    "    # fit the model on the training data\n",
+    "    rf_model.fit(X_train, y_train)\n",
+    "    y_pred = rf_model.predict(X_test)\n",
+    "\n",
+    "    # evaluate the model on the testing data\n",
+    "    score = rf_model.score(X_test, y_test)\n",
+    "    rf_scores.append(score)\n",
+    "    # print the accuracy score for each fold\n",
+    "    print(\"report:\", classification_report(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
